27.6.1
------

27.6.0
------
(RB=1799751)
Fix PDL encoder logic for writing import statements

(RB=1794904)
Pegasus tmc release job is failing with out of memory error while runing r2-int-tests. Try to reduce the overall memory
footprint by having one netty eventloop group and cleaning up objects created in tests

(RB=1783117)
Add a config field in RestLiMethodConfig to validate query parameters

(RB=1788651)
Set the initial capacity of records and union templates to reduce unused memory.

(RB=1791278)
Int-tests for Alternative Key Server Implementation

(RB=1795608)
Fix PDL bug for encoding escaped package declarations

(RB=1794668)
Fix PDL bug for encoding schemas with empty namespaces

(RB=1793893)
Fix PDL bug for encoding self-referential schemas in DENORMALIZE mode

(RB=1793883)
Support aliases for named data schemas in PDL

27.5.3
------
(RB=1785332)
Temporarily add the "java" keyword poped from TypedUrn as excluded property keyword for pdsc to avsc schema translation

27.5.2
------
(RB=1790760)
Properly recover from corrupted uriValues in FileStore.

27.5.1
------
(RB=1785332)
remove "validate" property that brought by TypedUrn in avsc schemas

27.5.0
------
(RB=1779724)
Fix memory leak in test by properly shutting down HttpClientFactory in test data providers.
Revert commit 'f9d016b1b7f969c04368c0872b501e592c48c889' - that introduced a test failure

(RB=1780445)
Create constants for bounded load thresholds.

27.4.3
------
(RB=1775062)
Upgrade to Netty 4.1.39, Fix Deprecated Http2 APIs, Fix Netty Bug
Bumping the r2 integration test port to higher number as the tmc ORCA job is failing consistently due to port conflict

27.4.2
-------
(RB=1778282)
Precompiling regex Pattern instead of calling String.replaceAll

(RB=1770806)
Fix indentation for certain PDL encoder cases

(RB=1770797)
Extend PDL syntax to allow unions with aliases

(RB=1772174)
Fix TestDisruptFilter flaky test

27.4.1
-------
(RB=1767362)